<resources>
    <string name="app_name">nsChampionshipResultsApp</string>
    <string name="loginText">Login:</string>
    <string name="passwordText">Senha:</string>
    <string name="loginButtonText">Login</string>
    <string name="train_icon_description">Train icon</string>
    <string name="register">Cadastre-se</string>
    <string name="helloWorld">Olá, mundo!</string>
    <string name="create_account">Criar conta</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="player_name">Nome do jogador</string>
    <string name="add_player">Adicionar Jogador</string>
    <string name="generate_matches">Gerar partidas</string>
    <string name="match_with_number">Partida %1$d</string>
    <string name="penalty_result">($1%d X $2%d)</string>
    <string name="match_result">$1%d X $2%d</string>
    <string name="player_team">Time do jogador</string>

</resources>
